--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-toast-notifications": "^2.5.1",
+    "react-toastify": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
