--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "classnames": "^2.5.1",
-    "framer-motion": "^10.17.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
