--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-toastify": "^10.0.0"
   },
   "devDependencies": {
