--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "react-scroll-to-top": "^3.0.0",
-    "react-toastify": "^10.0.0"
+    "react-toastify": "^10.0.0",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
